28-production-debug-mode/challenge/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d28-production-debug
  labels:
    app: d28-production-debug
    challenge-id: d28
spec:
  replicas: 1
  selector:
    matchLabels:
      app: d28-production-debug
  template:
    metadata:
      labels:
        app: d28-production-debug
        challenge-id: d28
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1002
        runAsGroup: 1002
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: gateway
          image: d28-production-debug-mode:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 384Mi
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
