28-production-debug-mode/challenge/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: d28-http-service
  labels:
    app: d28-production-debug
spec:
  type: ClusterIP
  selector:
    app: d28-production-debug
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
